# trading-system-vortex

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  BINANCE_DATA_INTEGRATION.md  CHANGELOG.md  CHANLUN_INTEGRATION.md  DEVELOPMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  ICEBERG_EXECUTION.md  OPTIMIZATION_REPORT.md  README.md  TECHNICAL_DOCUMENTATION.md  VORTEX_V4_ULTIMATE_REPORT.md  bench_perf.py  day1_cutover_v2.sh  pyproject.toml  requirements.txt  run_backtest_60days.py  test_iceberg.py
.github/workflows/: build.yml
config/: risk.yaml  signal_taxonomy.yaml  strategy.yaml  symbols.yaml
docs/: MULTIMODAL_INTEGRATION.md  PHASE2_FEATURE_BLUEPRINT.md  PROJECT_LEVIATHAN_SUMMARY.md  README_snippet.md  VORTEX_V4_TOP_INSTITUTIONAL_AUDIT.md  ci_pipeline.yml  index.md
src/: arbitrage_engine.py  automated_trading.py  backtest.py  backtest_runner.py  binance_websocket.py  chanlun_engine.py  concurrent_safety.py  config_loader.py  config_manager.py  consistency_audit.py  cross_exchange_manager.py  dashboard.py  data_persistence.py  data_provider.py  derivatives_data.py  dynamic_risk_manager.py  execution_engine.py  feature_engine.py  healthcheck.py  intermarket_data.py  journal.py  main.py  main_optimized.py  market_data.py  ml_signal_filter.py  monitoring.py  multi_proc_manager.py  multimodal_oracle.py  portfolio_manager.py  quick_backtest.py  risk_engine.py  risk_engine_optimized.py  run_optimized_backtest.py  runner.py  runtime_config.py  signal_engine.py  signal_engine_optimized.py  signal_engine_v2.py  signal_sender.py  startup.py  (+8 more)
src/core/: binance_websocket.py  market_data.py  multi_proc_manager.py
src/strategies/: ml_signal_filter.py  train_rl_agent.py  vortex_env.py
src/utils/: telegram_notifier.py
tests/: test_automated_trading.py  test_binance_websocket.py  test_data_provider_context.py  test_exception_scenarios.py  test_execution_engine.py  test_monitoring.py  test_quick_backtest.py  test_signal_risk_rules.py  test_signal_sender.py  test_strategy_lab_smoke.py  test_telegram_notifier.py
tools/: run_optimized_backtest.py
