[project]
name = "vortex-trading-system"
version = "2.0.0"
description = "Institution-grade server-side quantitative cryptocurrency trading system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Web3MetaDao", email = "web3metadao@users.noreply.github.com" }]
keywords = ["quantitative-trading", "cryptocurrency", "algorithmic-trading", "binance", "arbitrage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Exchange connectivity
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "orjson>=3.9.0",
    # Configuration & environment
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    # Reinforcement learning
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    # Monitoring & notifications
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    # Utilities
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
vortex = "startup:main"
vortex-backtest = "backtest_runner:main"
vortex-dashboard = "dashboard:main"

[project.urls]
Homepage = "https://github.com/Web3MetaDao/trading-system-vortex"
Repository = "https://github.com/Web3MetaDao/trading-system-vortex"
Issues = "https://github.com/Web3MetaDao/trading-system-vortex/issues"
Changelog = "https://github.com/Web3MetaDao/trading-system-vortex/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .eggs
  | .git
  | .venv
  | build
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_local_folder = ["tests"]
skip = [".git", ".venv", "build", "dist", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "F401", "F811"]
"tools/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
